Refactor and simplify codebase by replacing custom utilities and handlers with standardized services.